--- a/public/azure/how-to-start-cloud-journey-2025/index.html
+++ b/public/azure/how-to-start-cloud-journey-2025/index.html
@@ -17,7 +17,7 @@ In this post, I will share a step-by-step practical guide to help you start your
 <meta name="author" content="Kasi Suresh">
 <link rel="canonical" href="http://localhost:1313/azure/how-to-start-cloud-journey-2025/">
 <link crossorigin="anonymous" href="/assets/css/stylesheet.8fe10233a706bc87f2e08b3cf97b8bd4c0a80f10675a143675d59212121037c0.css" integrity="sha256-j&#43;ECM6cGvIfy4Is8&#43;XuL1MCoDxBnWhQ2ddWSEhIQN8A=" rel="preload stylesheet" as="style">
-<link rel="icon" href="http://localhost:1313/favicon.ico">
+<link rel="icon" href="http://localhost:1313/images/favicon.ico">
 <link rel="icon" type="image/png" sizes="16x16" href="http://localhost:1313/favicon-16x16.png">
 <link rel="icon" type="image/png" sizes="32x32" href="http://localhost:1313/favicon-32x32.png">
 <link rel="apple-touch-icon" href="http://localhost:1313/apple-touch-icon.png">
@@ -139,7 +139,7 @@ In this post, I will share a step-by-step practical guide to help you start your
     "name": "KasdevTech",
     "logo": {
       "@type": "ImageObject",
-      "url": "http://localhost:1313/favicon.ico"
+      "url": "http://localhost:1313/images/favicon.ico"
     }
   }
 }
@@ -209,6 +209,11 @@ In this post, I will share a step-by-step practical guide to help you start your
             <li>
                 <a href="http://localhost:1313/ai/" title="AI">
                     <span>AI</span>
+                </a>
+            </li>
+            <li>
+                <a href="http://localhost:1313/finsight/" title="Finsight">
+                    <span>Finsight</span>
                 </a>
             </li>
             <li>
