--- a/public/azure/appservice/index.html
+++ b/public/azure/appservice/index.html
@@ -274,10 +274,10 @@
 </span></span></span><span style="display:flex;"><span><span style="color:#ae81ff"></span>   --resource-group MyRG <span style="color:#ae81ff">\
 </span></span></span><span style="display:flex;"><span><span style="color:#ae81ff"></span>   --application-logging filesystem <span style="color:#ae81ff">\
 </span></span></span><span style="display:flex;"><span><span style="color:#ae81ff"></span>   --web-server-logging filesystem
-</span></span></code></pre></div><p>Check the LogFiles directory in Kudu Console (https://<!-- raw HTML omitted -->.scm.azurewebsites.net/DebugConsole).</p>
+</span></span></code></pre></div><p>Check the LogFiles directory in Kudu Console (https://<appname>.scm.azurewebsites.net/DebugConsole).</p>
 <h4 id="step-2-use-kudu-console-to-debug">Step 2: Use Kudu Console to Debug<a hidden class="anchor" aria-hidden="true" href="#step-2-use-kudu-console-to-debug">#</a></h4>
 <p>The Kudu Console is your best friend.</p>
-<p>Navigate to: https://<!-- raw HTML omitted -->.scm.azurewebsites.net</p>
+<p>Navigate to: https://<appname>.scm.azurewebsites.net</p>
 <p>Go to Debug Console → CMD</p>
 <p>Run commands like:</p>
 <p>dir site\wwwroot
