--- a/public/azure/azure-routing-simplified/index.html
+++ b/public/azure/azure-routing-simplified/index.html
@@ -288,7 +288,7 @@ That magic is thanks to <strong>Routing</strong> – and in Azure, it’s handle
           <td>Internet</td>
       </tr>
       <tr>
-          <td><!-- raw HTML omitted --></td>
+          <td><VNet CIDR></td>
           <td>Virtual Network</td>
       </tr>
       <tr>
