--- a/public/terraform/out-of-band-changes/index.html
+++ b/public/terraform/out-of-band-changes/index.html
@@ -274,7 +274,7 @@ Terraform now recognizes the resource as managed.
 </code></pre><h4 id="notes">Notes:<a hidden class="anchor" aria-hidden="true" href="#notes">#</a></h4>
 <ul>
 <li>Always define the resource exactly as it exists in Azure.</li>
-<li>Use terraform state show <!-- raw HTML omitted --> after import to confirm values.</li>
+<li>Use terraform state show <resource> after import to confirm values.</li>
 <li>Use imports to bring drifted or manually created resources back under Terraform.</li>
 </ul>
 <p><strong>– Kasi @ <a href="https://kasdevtech.com">KasdevTech</a></strong> or <a href="https://www.linkedin.com/in/kasi-suresh-992675177/">LinkedIn</a></p>
