--- a/public/az-104/intro/index.html
+++ b/public/az-104/intro/index.html
@@ -82,7 +82,7 @@
     {
       "@type": "ListItem",
       "position":  1 ,
-      "name": "AZ-104 Series",
+      "name": "AZ-104",
       "item": "http://localhost:1313/az-104/"
     }, 
     {
